@@ -15,6 +15,7 @@
 *Add currency information to the bags datatext tooltip.
 *UIScale must be changed by at least 1% in order to recieve a UIScale popup warning to reload.
 *Chat Timestamps should now all have brackets around them, and be colored gray.
+*Minimap Location text is now only displayed when mousing over the minimap.
 
 [b]Fixes[/b]
 *The Reputation bar should have its width correctly set on login.
